<resources>
    <string name="crash_toast_text">VideLibri ist leider abgestürzt. Bitte warten, während ein Crash-Report erstellt wird.</string>
    <string name="crash_dialog_text">VideLibri ist leider abgestürzt. Sie können einen Crash-Report senden, um zu helfen, den Fehler in der nächsten Version zu beseitigen.</string>
    <string name="crash_dialog_comment_prompt">Ihr Kommentar und Kontaktdaten für eine Antwort:</string>
    <string name="crash_dialog_ok_toast">Fehlerbericht wurde versandt</string>
    <string name="crash_dialog_fail_toast">Übertragung fehlgeschlagen</string>
    <string name="about_version_date">Version: %1$1.3f vom %2$s</string>
    <string name="version">Version</string>
    <string name="homepage">Homepage</string>
    <string name="source">Quellcode</string>
    <string name="account_delete">Soll das Konto wirklich gelöscht werden?</string>
    <string name="change">ändern</string>
    <string name="error_nolibselected">Keine Bibliothek ausgewählt</string>
    <string name="warning_alphalib">Hinweis: Bei dieser Bibliothek wurde nur die Suche ohne Kontozugriff getestet, da uns kein Ausleihkonto zur Verfügung stand.
        Bitte geben Sie Feedback, ob das Konto gleich angezeigt wird oder nicht.
    </string>
    <plurals name="warning_autorenewal_onD">
        <item quantity="one">Automatische Verlängerung ist AKTIVIERT.\nVerlängert werden alle Ausleihen 1 Tag vor Fristablauf.\nEs ist darauf zu achten, keine Medien auszuleihen, deren Verlängerung kostenpflichtig ist.</item>
        <item quantity="other">Automatische Verlängerung ist AKTIVIERT.\nVerlängert werden alle Ausleihen %d Tage vor Fristablauf.\nEs ist darauf zu achten, keine Medien auszuleihen, deren Verlängerung kostenpflichtig ist.</item>
    </plurals>
    <string name="warning_autorenewal_off">Automatische Verlängerung ist DEAKTIVIERT.\nEs ist darauf zu achten, alle Ausleihen selbst zu verlängern.</string>
    <string name="account_createinitial">Wählen Sie Ihre Bibliothek, um in ihrem Katalog zu suchen oder auf Ihr
        Bibliothekskonto zuzugreifen:
    </string>
    <string name="account_create">Wählen Sie Ihre Bibliothek, um ein neues Konto zu registrieren:</string>
    <string name="book_titleauthor">Titeldaten</string>
    <string name="book_duedate">Abgabefrist</string>
    <string name="book_duedate_order">Frist</string>
    <string name="book_status_unknown">unbekannter Status</string>
    <string name="book_status_normal">normal/verlängerbar</string>
    <string name="book_status_problematic">nicht verlängerbar</string>
    <string name="book_status_ordered">bestellt</string>
    <string name="book_status_reserved">vorgemerkt</string>
    <string name="book_status_provided">abholbereit</string>
    <string name="book_status">Bemerkung</string>
    <string name="book_lenddate">Ausleihdatum</string>
    <string name="book_lenddate_before_prefixS">≤ %s</string>
    <string name="book_lendat">Ausgeliehen in</string>
    <string name="book_account">Konto</string>
    <string name="book_category">Kategorie</string>
    <string name="book_publisher">Verlag</string>
    <string name="book_order">vormerken/bestellen</string>
    <string name="book_renew">verlängern</string>
    <string name="book_cancel">Bestellung abbrechen</string>
    <string name="book_title">Titel</string>
    <string name="book_author">Autor</string>
    <string name="book_id">Signatur</string>
    <string name="book_barcode">Mediennummer</string>
    <string name="book_libraryBranch">Bibliothek</string>
    <string name="book_libraryLocation">Standort</string>
    <string name="book_pendingOrders">Vorbestellungen</string>
    <string name="book_year">Jahr</string>
    <string name="booklist_noselection">noch keine Auswahl</string>
    <string name="booklist_loading">Ergebnisse werden geladen...</string>
    <string name="booklist_from" />
    <string name="feedback_feedbacktitle">VideLibri Feedback</string>
    <string name="feedback_acraheader">Per ACRA für Fehlerberichte:</string>
    <string name="feedback_send_ok">Feedback wurde erfolgreich abgeschickt.</string>
    <string name="feedback_send_failed">Feedback konnte nur teilweise übertragen werden</string>
    <string name="feedback_send_failedconnect">Übertragung fehlgeschlagen.</string>
    <string name="error_nomailapp">Keine Mailapp gefunden.</string>
    <string name="menu_accounts">Ausleihen</string>
    <string name="menu_renewlist">Manche verlängern</string>
    <string name="menu_renewall">Alle verlängern</string>
    <string name="menu_refreshall">Alle aktualisieren</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_homepages">Webseiten</string>
    <string name="menu_cats">Katalogseiten</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">Über Videlibri</string>
    <string name="lay_feedback_label_formular">Per Formular:</string>
    <string name="lay_feedback_label_message">Feedback:</string>
    <string name="lay_feedback_label_name">Ihr Name (optional):</string>
    <string name="lay_feedback_label_mail">Ihre E-Mail (optional):</string>
    <string name="lay_feedback_caption_mail">Per E-Mail:</string>
    <string name="lay_feedback_caption_play">Per Google Play Store:</string>
    <string name="lay_feedback_caption_acra">Per ACRA für Fehlerberichte (enthält debug log):</string>
    <string name="lay_feedback_send">absenden</string>
    <string name="lay_feedback_acra">abstürzen, um Crash-Report zu senden</string>
    <string name="lay_feedback_label_includeerrors">Fehlermeldungen mitsenden</string>
    <string name="lay_feedback_label_includepagesanonymized">Struktur der zuletzt aufgerufenen Katalogseiten
        anonymisiert mitsenden
    </string>
    <string name="lay_feedback_label_includepagesfull">zuletzt aufgerufene Katalogseiten unverändert mitsenden</string>
    <string name="lay_options_caption_accountchange">Ausleihkonten:</string>
    <string name="lay_options_caption_notifications">Benachrichtigungservice:</string>
    <string name="lay_options_option_warn">Vor Ablauf warnen</string>
    <string name="lay_options_option_warn_summary_on">Laufe im Hintergrund und überprüfe regelmäßig, ob eine Leihfrist abläuft und bald etwas abgegeben werden muss.</string>
    <string name="lay_options_warningtimedelay">Tage vor Fristablauf</string>
    <string name="lay_options_label_autocheckdelay">Minuten nach Systemstart</string>
    <string name="lay_options_caption_ownlibs">Eigene Bibliotheken:</string>
    <string name="lay_options_caption_misc">Sonstige Einstellungen:</string>
    <string name="lay_options_option_onlytitles">Autor verbergen</string>
    <string name="lay_options_option_onlytitles_summary_on">Es wird nur die Zeile mit dem Titel/Abgabefrist einer Ausleihe angezeigt.</string>
    <string name="lay_options_option_debuglog">Debug Log</string>
    <string name="lay_options_option_debuglog_summary_on">Protokolliert sämtliche Aktivitäten der App im Android \"logcat\": alle intern aufgerufenen Funktionen, Katalogadressen und alle an die Bibliothek übertragenen Daten (inklusive Passwörter).</string>
    <string name="lay_options_option_includelog">Logdaten bei Fehlerberichten mitsenden</string>
    <string name="lay_options_option_includelog_summary_on">Versende das gesamte Debug-Log/logcat in Fehlerberichten, die durch ACRA (Application Crash Reports for Android) versandt werden.</string>
    <string name="lay_search_lib">Bibliothek</string>
    <string name="lay_search_libselect">Bitte wählen Sie eine Bibliothek aus</string>
    <string name="lay_search_title">Titel</string>
    <string name="lay_search_author">Autor</string>
    <string name="lay_search_keywords">Schlagwörter</string>
    <string name="lay_search_isbn">ISBN</string>
    <string name="lay_search_year">Jahr</string>
    <string name="lay_search_searchedbranch">Zweigstelle (für Suchfilter)</string>
    <string name="lay_search_orderbranch">Zweigstelle (für Bestellungsfilter)</string>
    <string name="lay_search_btn_search">Suchen</string>
    <string name="lay_options_label_filtering">Filter</string>
    <string name="lay_show_renewcount">Verlängerungen zeigen</string>
    <string name="lay_show_renewcount_summary_on">Zeige die Verlängerungsanzahl aller Ausleihen in der Übersichtsliste (nicht bei allen Bibliotheken möglich).</string>
    <string name="lay_options_label_language">Sprachauswahl</string>
    <string name="lay_options_label_language_summary">Aktuelle Sprache: %s\nÄnderungen werden erst nach Appneustart aktiv.</string>
    <string name="lay_options_caption_displayoptions">Anzeige der Ausleihen:</string>
    <string name="menu_debuglog">Debug-Log</string>
    <string name="menu_search">Suche</string>
    <string name="menu_options">Einstellungen</string>
    <string name="lay_options_label_filtering_summary">Durchsuche \"%s\" Eigenschaft(en) bei Offline-Suchen in der Ausleihenhistorie.</string>
    <string name="lay_options_filter_search_in_history">Filter-Suche in Historie</string>
    <string name="lay_options_filter_search_in_history_summary_on">Durchsuche bei einer Offline-Ausleihen-Suche aktuelle und wieder abgegebene Ausleihen.</string>
    <string name="lay_options_filter_search_in_history_summary_off">Durchsuche bei einer Offline-Ausleihen-Suche nur aktuelle Ausleihen.</string>
    <string name="lay_options_refreshInterval">Aktualisierungs-Interval</string>
    <string name="lay_options_check_summary">Rufe die Bibliothekswebseite alle %d Tag(e) auf, um über neue oder abgegebene Ausleihen informiert zu werden.</string>
    <string name="lay_options_label_autocheckdelay_summary">Aktualisiere die Ausleihen und zeige die Abgabefristwarnung %d Minuten nach Einschalten des Geräts an.</string>
    <string name="lay_options_warningtimedelay_summary">Warne vor Ausleihen, die in den nächsten %d Tag(e) abgegeben werden müssen.</string>
    <string name="lay_options_caption_owncertificates">Zusätzliche HTTPS-Serverzertifikate</string>
    <string name="menu_item_research">Ähnliche suchen</string>
    <string name="menu_item_research_same">gleiche Ausleihe</string>
    <string name="menu_item_research_title">gleicher Titel</string>
    <string name="menu_item_research_author">gleicher Autor</string>
    <string name="menu_item_research_filter_author" >Ausleihen mit gleichem Autor</string>
    <string name="menu_account_information">Kontoinformationen</string>
    <string name="menu_book_delete" >Eintrag löschen</string>
    <string name="lay_options_label_autocheckdelay_too_large">Achtung: Bei zu hohen Werten hat man das Gerät vielleicht schon wieder ausgeschaltet, bevor eine Warnung angezeigt wird.</string>
    <string name="lay_options_warningtimedelay_too_small">Achtung: Bei zu geringen Werten könnte man die Warnung übersehen, wenn man das Gerät ein paar Tage lang nicht einschaltet.</string>
    <string name="lay_options_check_summary_too_large">Achtung: Wenn die Bibliothek Medien mit sehr kurzer Leihfristdauer hat (z.B.: Filme) und das Aktualisierungs-Interval geringer als die Leihfristdauer ist, ist die Leihfrist vielleicht schon abgelaufen, bevor aktualisiert wird.</string>
    <string name="menu_xquery_book_tracking">Ausleihenanalyse</string>
    <string name="menu_xquery_book_tracking_example_most_common_authors">Meist gelesene Autoren</string>
    <string name="menu_xquery_book_tracking_example_most_common_author_books">Bücher des meistgelesenen Autors</string>
    <string name="menu_xquery_book_tracking_example_borrowed_repeatedly">Mehrfach ausgeliehene Bücher</string>
    <string name="menu_xquery_book_tracking_example_longest_title">Längste Titel</string>
    <string name="menu_xquery_book_tracking_example_author_regex">Regex-Autoren-Suche</string>
    <string name="menu_xquery_book_tracking_example_title_regex">Regex-Titel-Suche</string>
    <string name="menu_xquery_book_tracking_example_primes">Primzahlen</string>
</resources>