<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/lay_options_caption_displayoptions">

        <ListPreference
            android:dialogTitle="@string/lay_options_label_filtering"
            android:entries="@array/filterable_properties_tr"
            android:entryValues="@array/filterable_properties"
            android:key="filtering"
            android:title="@string/lay_options_label_filtering"
            android:summary="@string/lay_options_label_filtering_summary"
            />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="alwaysFilterOnHistory"
            android:summaryOn="@string/lay_options_filter_search_in_history_summary_on"
            android:summaryOff="@string/lay_options_filter_search_in_history_summary_off"
            android:title="@string/lay_options_filter_search_in_history" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="noLendBookDetails"
            android:summaryOn="@string/lay_options_option_onlytitles_summary_on"
            android:title="@string/lay_options_option_onlytitles" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="showRenewCount"
            android:summaryOn="@string/lay_show_renewcount_summary_on"
            android:title="@string/lay_show_renewcount" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lay_options_caption_accountchange" android:key="accounts">
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lay_options_caption_notifications">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notifications"
            android:title="@string/lay_options_option_warn"
            android:summaryOn="@string/lay_options_option_warn_summary_on"/>
        <de.benibela.videlibri.components.PreferenceSeekBar
            android:defaultValue="15"
            android:max="1440"
            android:dependency="notifications"
            android:key="notificationsServiceDelay"
            android:title="@string/lay_options_label_autocheckdelay"
            app:dynamicSummary="@string/lay_options_label_autocheckdelay_summary"
            app:safeMax="120"
            app:unsafeWarning="@string/lay_options_label_autocheckdelay_too_large"
            />
        <de.benibela.videlibri.components.PreferenceSeekBar
            android:defaultValue="3"
            android:max="31"
            android:key="bridge_nearTime"
            android:title="@string/lay_options_warningtimedelay"
            app:dynamicSummary="@string/lay_options_warningtimedelay_summary"
            app:safeMin="3"
            app:unsafeWarning="@string/lay_options_warningtimedelay_too_small" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lay_options_caption_ownlibs" android:key="ownlibraries">
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lay_options_caption_owncertificates" android:key="owncertificates">
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lay_options_caption_misc">
        <de.benibela.videlibri.components.PreferenceSeekBar
            android:defaultValue="3"
            android:max="14"
            android:key="bridge_refreshInterval"
            android:title="@string/lay_options_refreshInterval"
            app:dynamicSummary="@string/lay_options_check_summary"
            app:safeMax="5"
            app:unsafeWarning="@string/lay_options_check_summary_too_large" />

        <ListPreference
            android:dialogTitle="@string/lay_options_label_language"
            android:entries="@array/languages_tr"
            android:entryValues="@array/languages"
            android:key="languageOverride"
            android:title="@string/lay_options_label_language"
            android:summary="@string/lay_options_label_language_summary"
            />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="bridge_logging"
            android:summaryOn="@string/lay_options_option_debuglog_summary_on"
            android:title="@string/lay_options_option_debuglog" />

        <SwitchPreferenceCompat
            android:key="acra.syslog.enable"
            android:summaryOn="@string/lay_options_option_includelog_summary_on"
            android:title="@string/lay_options_option_includelog"
            android:defaultValue="false"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>