<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="never"
        android:title="@string/menu_refreshall" />
    <item
        android:id="@+id/renewlist"
        android:icon="@android:drawable/ic_menu_week"
        app:showAsAction="never"
        android:title="@string/menu_renewlist" />
    <item
        android:id="@+id/renew"
        android:icon="@android:drawable/ic_menu_month"
        app:showAsAction="never"
        android:title="@string/menu_renewall" />
    <item
        app:showAsAction="never"
        android:id="@+id/research_menu"
        android:title="@string/menu_item_research" >
        <menu>
            <item android:id="@+id/research_same" android:title="@string/menu_item_research_same"/>
            <item android:id="@+id/research_title" android:title="@string/menu_item_research_title" />
            <item android:id="@+id/research_author" android:title="@string/menu_item_research_author" />
            <item android:id="@+id/research_filter_author" android:title="@string/menu_item_research_filter_author" />
        </menu>
    </item>
    <item
        app:showAsAction="never"
        android:id="@+id/delete"
        android:title="@string/menu_book_delete"/>
    <item
        app:showAsAction="never"
        android:id="@+id/account_information"
        android:title="@string/menu_account_information"/>
    <item
        android:id="@+id/xquery"
        app:showAsAction="never"
        android:title="@string/menu_xquery_book_tracking" >
        <menu>
            <item android:title="@string/menu_xquery_book_tracking_example_most_common_authors" android:id="@+id/xquery_example_most_common_authors" app:showAsAction="never"/>
            <item android:title="@string/menu_xquery_book_tracking_example_most_common_author_books" android:id="@+id/xquery_example_most_common_author_books" app:showAsAction="never"/>
            <item android:title="@string/menu_xquery_book_tracking_example_borrowed_repeatedly" android:id="@+id/xquery_example_borrowed_repeatedly" app:showAsAction="never"/>
            <item android:title="@string/menu_xquery_book_tracking_example_longest_title" android:id="@+id/xquery_example_longest_title" app:showAsAction="never"/>
            <item android:title="@string/menu_xquery_book_tracking_example_author_regex" android:id="@+id/xquery_example_author_regex" app:showAsAction="never"/>
            <item android:title="@string/menu_xquery_book_tracking_example_title_regex" android:id="@+id/xquery_example_title_regex" app:showAsAction="never"/>
            <item android:title="@string/menu_xquery_book_tracking_example_primes" android:id="@+id/xquery_example_primes" app:showAsAction="never"/>
        </menu>
    </item>
</menu>