<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/renewlist" android:title="@string/menu_renewlist" android:icon="@android:drawable/ic_menu_week"/>
    <item android:id="@+id/renew" android:title="@string/menu_renewall" android:icon="@android:drawable/ic_menu_month"/>
    <item android:id="@+id/refresh" android:title="@string/menu_refreshall" android:icon="@android:drawable/ic_menu_rotate"/>
    <item android:id="@+id/import_" android:title="@string/menu_import" android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/export" android:title="@string/menu_export" android:icon="@android:drawable/ic_menu_save"/>
    <item android:id="@+id/libinfo" android:title="@string/menu_homepages" android:icon="@android:drawable/ic_menu_info_details"/>
    <item android:id="@+id/libcatalogue" android:title="@string/menu_cats" android:icon="@android:drawable/ic_menu_info_details"/>
    <item android:id="@+id/feedback" android:title="@string/menu_feedback" android:icon="@android:drawable/ic_menu_send"/>
    <item android:id="@+id/debuglog" android:title="@string/menu_debuglog" android:icon="@android:drawable/ic_menu_recent_history"/>
    <item android:id="@+id/about" android:title="@string/menu_about" android:icon="@android:drawable/ic_menu_help"/>
</menu>


<!--
  xidel android/res/menu/submenu.xml -e '/menu/item/x"  texts.add(""{@*:title}""); icons.add(context.getResources().getDrawable(android.R.drawable.{extract(@android:icon, "[a-z_]+$")})); ids.add(R.id.{extract(@android:id, "[a-z_]+$")});"'

-->