<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" android:layout_weight="1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">


    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lay_feedback_label_formular"
              android:id="@+id/textView2" android:padding="@dimen/optionheaderpadding"
              android:background="@color/optionHeaderBackgroundColor" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lay_feedback_label_message"
            android:id="@+id/textView3" android:layout_gravity="left|center_vertical"
            android:padding="@dimen/defborder"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text" android:minLines="4" android:layout_weight="1"/>
    <CheckBox android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:text="@string/lay_feedback_label_includeerrors" android:id="@+id/feedbackIncludeErrors" android:checked="false"
              android:visibility="gone"/>
    <CheckBox android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:text="@string/lay_feedback_label_includepagesanonymized"
              android:id="@+id/feedbackIncludeErrorAnonymousDetails" android:checked="false" android:visibility="gone"/>
    <CheckBox android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:text="@string/lay_feedback_label_includepagesfull"
              android:id="@+id/feedbackIncludeErrorDetails" android:checked="false" android:visibility="gone"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_gravity="left|center_vertical"
            android:text="@string/lay_feedback_label_name" android:padding="@dimen/defborder"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name" android:singleLine="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lay_feedback_label_mail"
            android:id="@+id/textView5" android:layout_gravity="left|center_vertical"
            android:padding="@dimen/defborder"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail" android:singleLine="true"/>

            <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lay_feedback_send"
            android:id="@+id/button"/>


            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/lay_feedback_caption_mail" android:id="@+id/textView"
                      android:padding="@dimen/optionheaderpadding"
                      android:background="@color/optionHeaderBackgroundColor" android:textStyle="bold"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="benito@benibela.de"
                    android:id="@+id/textViewMail" android:padding="20sp"
                    android:gravity="center" android:clickable="true" android:textColor="#5830ff"/>


            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/lay_feedback_caption_play"
                      android:padding="@dimen/optionheaderpadding"
                      android:background="@color/optionHeaderBackgroundColor" android:textStyle="bold"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="https://play.google.com/store/apps/details?id=de.benibela.videlibri"
                    android:autoLink="email|web" android:padding="20sp"
                    android:gravity="center"/>



            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lay_feedback_caption_acra"
                      android:id="@+id/feedbackACRAHeader" android:padding="@dimen/optionheaderpadding"
                      android:background="@color/optionHeaderBackgroundColor" android:textStyle="bold"/>
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_feedback_label_includeerrors"
                    android:id="@+id/feedbackACRAIncludeErrors" android:checked="false"
                    android:visibility="gone"/>
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_feedback_label_includepagesanonymized"
                    android:id="@+id/feedbackACRAIncludeErrorAnonymousDetails" android:checked="false"
                    android:visibility="gone"/>
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_feedback_label_includepagesfull"
                    android:id="@+id/feedbackACRAIncludeErrorDetails" android:checked="false"
                    android:visibility="gone"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lay_feedback_acra"
                    android:id="@+id/acra"/>
        </LinearLayout>
</ScrollView>
</LinearLayout>