<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_lib"
                    android:id="@+id/textView4" android:layout_gravity="left|center_vertical" android:textStyle="bold"
                    android:padding="3sp"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_libselect"
                    android:id="@+id/library" android:paddingLeft="30sp" android:clickable="true"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_title"
                    android:labelFor="@id/title"
                    android:id="@+id/textView" android:textStyle="bold" android:padding="3sp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:id="@+id/title" android:singleLine="true"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_author"
                    android:labelFor="@id/author"
                    android:id="@+id/textView1" android:textStyle="bold" android:padding="3sp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:id="@+id/author" android:singleLine="true"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_keywords"
                    android:labelFor="@id/keywords"
                    android:id="@+id/textView2" android:textStyle="bold" android:padding="3sp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:id="@+id/keywords" android:singleLine="true"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_isbn"
                    android:labelFor="@id/isbn"
                    android:id="@+id/textView3" android:textStyle="bold" android:padding="3sp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:id="@+id/isbn" android:singleLine="true"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_search_year"
                    android:textStyle="bold"
                android:labelFor="@id/year"
                    android:padding="3sp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:id="@+id/year" android:singleLine="true"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:id="@+id/searchBranchLayout">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lay_search_searchedbranch"
                        android:textStyle="bold"
                    android:labelFor="@id/searchBranch"
                        android:id="@+id/textView5"/>
                <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/searchBranch"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:id="@+id/homeBranchLayout">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/homeBranch"
                        android:textStyle="bold"
                        android:text="@string/lay_search_orderbranch"
                        android:id="@+id/textView6"/>
                <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homeBranch"/>
            </LinearLayout>
            <Button
                android:minHeight="48dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lay_search_btn_search"
                android:id="@+id/button"/>
        </LinearLayout>
    </ScrollView>
